--- a/index.html
+++ b/index.html
@@ -1,40 +1,139 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://www.cdnfonts.com/coluna-rounded.font">
     <link href="styles.css" rel="stylesheet">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">  
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png"> 
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
-    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
-   <title>LA CASA DE PIZZA</title>
-</head>
-<body>
+    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap"
+      rel="stylesheet">
+    <title>LA CASA DE PIZZA</title>
+  </head>
+  <body>
+    <div class="main-container">
 
-<footer>
-    <div id="mentions-legales">
-        <img id="logofooter" src="https://i.ibb.co/Z6w3Qy9/logo.jpg" alt="Logo de la casa de pizza"/>
-        <p>Mentions légales | Politique de confidentialité</p>
+      <h1>Carte</h1>
+      <h2>Les PIZZAS CLASSIQUES</h2>
+
+      <div class="flex-container">
+        <div>
+          <section id="Professeur">
+            <h3>Professeur</h3>
+            <p>Les ingrédients</p>
+          </section>
+        </div>
+
+        <div>
+          <section id="Tokyo">
+            <h3>Tokyo</h3>
+            <p>Les ingrédients</p>
+          </section>
+        </div>
+
+        <div>
+          <section id="Lisbonne">
+            <h3>Lisbonne</h3>
+            <p>Les ingrédients</p>
+          </section>
+        </div>
+
+        <div>
+          <section id="Berlin">
+            <h3>Berlin</h3>
+            <p>Les ingrédients</p>
+          </section>
+        </div>
+
+        <div>
+          <section id="Rio">
+            <h3>Rio</h3>
+            <p>Les ingrédients</p>
+          </section>
+        </div>
+
+        <div>
+          <section id="Nairobi">
+            <h3>Nairobi</h3>
+            <p>Les ingrédients</p>
+          </section>
+        </div>
+
+      </div>
+
+      <h2>Les PIZZAS SIGNATURES</h2>
+
+      <div class="flex-container">
+
+        <div>
+          <section id="Denver">
+            <h3>Denver</h3>
+            <p>Les ingrédients</p>
+          </section>
+        </div>
+
+        <div>
+          <section id="Moscou">
+            <h3>Moscou</h3>
+            <p>Les ingrédients</p>
+          </section>
+        </div>
+
+        <div>
+          <section id="Helsinki">
+            <h3>Helsinki</h3>
+            <p>Les ingrédients</p>
+          </section>
+        </div>
+
+        <div>
+          <section id="Stockholm">
+            <h3>Stockholm</h3>
+            <p>Les ingrédients</p>
+          </section>
+        </div>
+
+        <div>
+          <section id="Palerme">
+            <h3>Palerme</h3>
+            <p>Les ingrédients</p>
+          </section>
+        </div>
+
+        <div>
+          <section id="Bogota">
+            <h3>Bogota</h3>
+            <p>Les ingrédients</p>
+          </section>
+        </div>
+
+      </div>
     </div>
-    <div id="adresse">
-        <h3>ADRESSE</h3>
-            <p>3, Place Stalingrad</p>
-            <p>33100 Bordeaux Bastide</p>
-            <p>Arrêt TRAM A Stalingrad</p>
-            <p>Téléphone : 05 56 32 28 44</p>
-    </div>
-    <div id="horaires">
-        <h3>HORAIRES</h3>   
-        <p>Durant le couvre-feu vous pouvez commander :</p>
-        <p>Lundi au Vendredi : 11h15 - 14h00 / 17h15 - 20h30.</p>
-        <p>Samedi : 17h15 - 20h30.</p>
-        <p>Du lundi au samedi nous vous livrons entre 19h30 et 21h00.</p>
-    </div>
-</footer> 
-<script type="text/javascript" src="index.js"></script>
-</body>
-</html>
+      <footer>
+        <div id="mentions-legales">
+          <img id="logofooter" src="https://i.ibb.co/Z6w3Qy9/logo.jpg" alt="Logo
+            de la casa de pizza" />
+          <p>Mentions légales | Politique de confidentialité</p>
+        </div>
+        <div id="adresse">
+          <h3>ADRESSE</h3>
+          <p>3, Place Stalingrad</p>
+          <p>33100 Bordeaux Bastide</p>
+          <p>Arrêt TRAM A Stalingrad</p>
+          <p>Téléphone : 05 56 32 28 44</p>
+        </div>
+        <div id="horaires">
+          <h3>HORAIRES</h3>
+          <p>Durant le couvre-feu vous pouvez commander :</p>
+          <p>Lundi au Vendredi : 11h15 - 14h00 / 17h15 - 20h30.</p>
+          <p>Samedi : 17h15 - 20h30.</p>
+          <p>Du lundi au samedi nous vous livrons entre 19h30 et 21h00.</p>
+        </div>
+      </footer>
+      <script type="text/javascript" src="index.js"></script>
+    </body>
+  </html>
