Ajout du formulaire

--- a/index.html
+++ b/index.html
@@ -10,11 +10,35 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png"> 
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
-    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+    <link href="http://fonts.cdnfonts.com/css/coluna-rounded" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap"
+      rel="stylesheet">
    <title>LA CASA DE PIZZA</title>
 </head>
 <body>
-
+    <section id="mapForm">
+        <div id="maps">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2829.0613629677364!2d-0.5613814844633095!3d44.840683679098554!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd55262de577d073%3A0x17a273425b1e48b9!2sPl.%20de%20Stalingrad%2C%2033100%20Bordeaux!5e0!3m2!1sfr!2sfr!4v1632901047191!5m2!1sfr!2sfr" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        </div>
+        
+        <form id="contactForm" method="post" action="" >
+            <h2>Contactez nous</h2>
+            <label for="name">Nom:</label>
+            <input type="text" id="lastName" name="lastName" value="" />
+            <label for="name">Prénom:</label>
+            <input type="text" id="firstName" name="firstName" value="" />
+            <label for="">Email:</label>
+            <input
+              type="email"
+              id="email"
+              name="email"
+              value="">
+            <label for="message">Message:</label>
+            <textarea id="message" name="message"></textarea>
+            <input id="button" type="submit" value="Submit" />
+          </form>
+      
+    </section>
 <footer>
     <div id="mentions-legales">
         <img id="logofooter" src="https://i.ibb.co/Z6w3Qy9/logo.jpg" alt="Logo de la casa de pizza"/>
