--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="main-container">
 
       <h1>Carte</h1>
-      <h2>Les PIZZAS CLASSIQUES</h2>
+      <h2>NOS PIZZAS CLASSIQUES</h2>
 
       <div class="flex-container">
         <div>
@@ -81,7 +81,7 @@
 
       </div>
 
-      <h2>Les PIZZAS SIGNATURES</h2>
+      <h2>NOS PIZZAS SIGNATURES</h2>
 
       <div class="flex-container">
 
