ajout header + modif

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
+<head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,12 +12,14 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
     <link href="http://fonts.cdnfonts.com/css/coluna-rounded" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap"
-      rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     <title>LA CASA DE PIZZA</title>
-  </head>
+</head>
 
 <body>
+    <div id="conteneur-image">
+        <hr><h1>LA CASA <strong>DE</strong> PIZZA</h1><hr>
+   </div>
     <section id="container_history">
         <div class="history_text">
             <h2>Pizzeria italienne traditionnel depuis 1999</h2>
@@ -33,101 +35,136 @@
     </section>
     <div class="main-container">
 
-      <h1>Carte</h1>
-      <h2>Les PIZZAS CLASSIQUES</h2>
+        <h2>Carte</h2>
+        <h2>Les PIZZAS CLASSIQUES</h2>
 
-      <div class="flex-container">
-        <div>
-          <section id="Professeur">
-            <h3>Professeur</h3>
-            <p>Les ingrédients</p>
-          </section>
+        <div class="flex-container">
+            <div>
+                <section id="Professeur">
+                    <h3>Professeur</h3>
+                    <p>Les ingrédients</p>
+                </section>
+            </div>
+
+            <div>
+                <section id="Tokyo">
+                    <h3>Tokyo</h3>
+                    <p>Les ingrédients</p>
+                </section>
+            </div>
+
+            <div>
+                <section id="Lisbonne">
+                    <h3>Lisbonne</h3>
+                    <p>Les ingrédients</p>
+                </section>
+            </div>
+
+            <div>
+                <section id="Berlin">
+                    <h3>Berlin</h3>
+                    <p>Les ingrédients</p>
+                </section>
+            </div>
+
+            <div>
+                <section id="Rio">
+                    <h3>Rio</h3>
+                    <p>Les ingrédients</p>
+                </section>
+            </div>
+
+            <div>
+                <section id="Nairobi">
+                    <h3>Nairobi</h3>
+                    <p>Les ingrédients</p>
+                </section>
+            </div>
+
         </div>
 
-        <div>
-          <section id="Tokyo">
-            <h3>Tokyo</h3>
-            <p>Les ingrédients</p>
-          </section>
+        <h2>Les PIZZAS SIGNATURES</h2>
+
+        <div class="flex-container">
+
+            <div>
+                <section id="Denver">
+                    <h3>Denver</h3>
+                    <p>Les ingrédients</p>
+                </section>
+            </div>
+
+            <div>
+                <section id="Moscou">
+                    <h3>Moscou</h3>
+                    <p>Les ingrédients</p>
+                </section>
+            </div>
+
+            <div>
+                <section id="Helsinki">
+                    <h3>Helsinki</h3>
+                    <p>Les ingrédients</p>
+                </section>
+            </div>
+
+            <div>
+                <section id="Stockholm">
+                    <h3>Stockholm</h3>
+                    <p>Les ingrédients</p>
+                </section>
+            </div>
+
+            <div>
+                <section id="Palerme">
+                    <h3>Palerme</h3>
+                    <p>Les ingrédients</p>
+                </section>
+            </div>
+
+            <div>
+                <section id="Bogota">
+                    <h3>Bogota</h3>
+                    <p>Les ingrédients</p>
+                </section>
+            </div>
+
         </div>
-
+    </div>
+    <div id="container_extra">
         <div>
-          <section id="Lisbonne">
-            <h3>Lisbonne</h3>
-            <p>Les ingrédients</p>
-          </section>
+            <h2>Nos vins :</h2>
+            <ul>
+                <li>Bardolino rosé 75cl</li>
+                <li>Bardolino rosé 37,5cl</li>
+                <li>Chianti (rouge) 37,5cl</li>
+                <li>Chianti (rouge) 37,5cl</li>
+                <li>Chianti (rouge) 37,5cl</li>
+                <li>ambrusco Regiano Roso 20cl</li>
+            </ul>
         </div>
-
         <div>
-          <section id="Berlin">
-            <h3>Berlin</h3>
-            <p>Les ingrédients</p>
-          </section>
+            <h2>Nos boissons :</h2>
+            <ul>
+                <li>Soda 33cl</li>
+                <li>San Pellegrino 50cl</li>
+                <li>San Pellegrino 1L</li>
+                <li>Limonade artisanales ABBONDIO 27,5cl</li>
+                <li>Thés artisanales ABBONDIO 27,5cl</li>
+                <li>Café</li>
+            </ul>
         </div>
-
         <div>
-          <section id="Rio">
-            <h3>Rio</h3>
-            <p>Les ingrédients</p>
-          </section>
+            <h2>Nos desserts :</h2>
+            <ul>
+                <li>Tiramisu traditionnel</li>
+                <li>Tiramisu au spéculos</li>
+                <li>Mousse au chocolat maison</li>
+                <li>Panna Cotta - Fruits rouges</li>
+                <li>Panna Cotta - Caramel</li>
+                <li>Eclair au chocolat</li>
+            </ul>
         </div>
-
-        <div>
-          <section id="Nairobi">
-            <h3>Nairobi</h3>
-            <p>Les ingrédients</p>
-          </section>
-        </div>
-
-      </div>
-
-      <h2>Les PIZZAS SIGNATURES</h2>
-
-      <div class="flex-container">
-
-        <div>
-          <section id="Denver">
-            <h3>Denver</h3>
-            <p>Les ingrédients</p>
-          </section>
-        </div>
-
-        <div>
-          <section id="Moscou">
-            <h3>Moscou</h3>
-            <p>Les ingrédients</p>
-          </section>
-        </div>
-
-        <div>
-          <section id="Helsinki">
-            <h3>Helsinki</h3>
-            <p>Les ingrédients</p>
-          </section>
-        </div>
-
-        <div>
-          <section id="Stockholm">
-            <h3>Stockholm</h3>
-            <p>Les ingrédients</p>
-          </section>
-        </div>
-
-        <div>
-          <section id="Palerme">
-            <h3>Palerme</h3>
-            <p>Les ingrédients</p>
-          </section>
-        </div>
-
-        <div>
-          <section id="Bogota">
-            <h3>Bogota</h3>
-            <p>Les ingrédients</p>
-          </section>
-        </div>
-
-      </div>
     </div>
     <footer>
         <div id="mentions-legales">
@@ -153,4 +190,3 @@
 </body>
 
 </html>
-
