Résolution de bugs mineurs dans l'affichage

--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
     <section id="container_history">
         <div class="history_text">
             <h2>Pizzeria italienne traditionnelle depuis 1999</h2>
-            <p>La Casa de Pizza est l'un des plus anciens restaurants italiens de Bordeaux Bastide, créé en 1999.</p>
-            <p>Notre credo : vous proposer des pizzas typiquement italiennes à partir de produits frais et de qualité
+            <p class="text">La Casa de Pizza est l'un des plus anciens restaurants italiens de Bordeaux Bastide, créé en 1999.</p>
+            <p class="text">Notre credo : vous proposer des pizzas typiquement italiennes à partir de produits frais et de qualité
                 tout au long de l'année.</p>
-            <p>Notre objectif : vous proposer un voyage à travers la gastronomie italienne. Nos chefs expérimentés et
+            <p class="text">Notre objectif : vous proposer un voyage à travers la gastronomie italienne. Nos chefs expérimentés et
                 leurs
                 fours au feu de bois rendront cette expérience unique.</p>
         </div>
@@ -172,7 +172,7 @@
                 <li>Chianti (rouge) 37,5cl</li>
                 <li>Chianti (rouge) 37,5cl</li>
                 <li>Chianti (rouge) 37,5cl</li>
-                <li>ambrusco Regiano Roso 20cl</li>
+                <li>Ambrusco Regiano Roso 20cl</li>
             </ul>
         </div>
         <div>
