added paths on the two navbars

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 
 
                 <nav role="navigation" id="topnav_menu">
-                    <a class="topnav_link" href="/about">Notre restaurant</a>
-                    <a class="topnav_link" href="/contact-us">Carte</a>
-                    <a class="topnav_link" href="#contact">Contact</a>
+                    <a class="topnav_link" href="#container_history">Notre restaurant</a>
+                    <a class="topnav_link" href="#menu">Carte</a>
+                    <a class="topnav_link" href="#contactForm">Contact</a>
             </nav>
 
             <a id="topnav_hamburger_icon" href="javascript:void(0);"
@@ -44,9 +44,9 @@
 
             <nav role="navigation" id="topnav_responsive_menu">
                 <ul>
-                    <li><a href="/about">Notre restaurant</a></li>
-                    <li><a href="/contact-us">Carte</a></li>
-                    <li><a href="/privacy-policy">Contact</a></li>
+                    <li><a href="#container_history">Notre restaurant</a></li>
+                    <li><a href="#menu">Carte</a></li>
+                    <li><a href="#contactForm">Contact</a></li>
                 </ul>
             </nav>
         </div>
@@ -77,7 +77,7 @@
     </section>
     <div class="main-container">
 
-        <h2>Carte</h2>
+        <h2 id="menu">Carte</h2>
         <h2>NOS PIZZAS CLASSIQUES</h2>
 
         <div class="flex-container">
