--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://www.cdnfonts.com/coluna-rounded.font">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link href="styles.css" rel="stylesheet">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -24,8 +23,8 @@
 
 
             <nav role="navigation" id="topnav_menu">
-                <a class="topnav_link" href="/about">Notre restaurant</a>
-                <a class="topnav_link" href="/contact-us">Carte</a>
+                <a class="topnav_link" href="/about">Notre histoire</a>
+                <a class="topnav_link" href="/contact-us">Notre carte</a>
                 <a class="topnav_link" href="#contact">Contact</a>
             </nav>
 
@@ -37,8 +36,8 @@
 
             <nav role="navigation" id="topnav_responsive_menu">
                 <ul>
-                    <li><a href="/about">Notre restaurant</a></li>
-                    <li><a href="/contact-us">Carte</a></li>
+                    <li><a href="/about">Notre histoire</a></li>
+                    <li><a href="/contact-us">Notre carte</a></li>
                     <li><a href="/privacy-policy">Contact</a></li>
                 </ul>
             </nav>
@@ -53,7 +52,12 @@
 
     <section id="container_history">
         <div class="history_text">
-            <h2>Pizzeria italienne traditionnelle depuis 1999</h2>
+            <div class="title_white">
+                <hr>
+                <h2>Notre histoire</h2>
+                <hr>
+            </div>
+            <h3>Pizzeria italienne traditionnelle depuis 1999</h3>
             <p class="text">La Casa de Pizza est l'un des plus anciens
                 restaurants italiens de Bordeaux Bastide, créé en 1999.</p>
             <p class="text">Notre credo : vous proposer des pizzas typiquement
@@ -69,9 +73,9 @@
         </div>
     </section>
     <div class="main-container">
-        <div class="title_menu">
+        <div class="title_white">
             <hr>
-            <h2>Carte</h2>
+            <h2>Notre carte</h2>
             <hr>
         </div>
         
@@ -249,8 +253,8 @@
                     <li>Soda 33cl</li>
                     <li>San Pellegrino 50cl</li>
                     <li>San Pellegrino 1L</li>
-                    <li>Limonade artisanales ABBONDIO 27,5cl</li>
-                    <li>Thés artisanales ABBONDIO 27,5cl</li>
+                    <li>Limonade artisanales<br> ABBONDIO 27,5cl</li>
+                    <li>Thés artisanales<br> ABBONDIO 27,5cl</li>
                     <li>Café</li>
                 </ul>
             </div>
