fixe bug scrool menu

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <div class="main-container">
             <div class="title_white">
                 <hr>
-                <h2>Notre carte</h2>
+                <h2 id="menu">Notre carte</h2>
                 <hr>
             </div>
 
