--- a/index.html
+++ b/index.html
@@ -299,9 +299,9 @@
 
         <form id="contactForm" method="post" action="">
             <h2>Contactez nous</h2>
-            <label for="name">Nom:</label>
+            <label for="lastname">Nom:</label>
             <input type="text" id="lastName" name="lastName" value="" />
-            <label for="name">Prénom:</label>
+            <label for="firstname">Prénom:</label>
             <input type="text" id="firstName" name="firstName" value="" />
             <label for="email">Email:</label>
             <input type="email" id="email" name="email" value="">
@@ -331,7 +331,7 @@
                 21h00.</p>
         </div>
     </footer>
-    <script type="text/javascript" src="index.js"></script>
+    <script src="index.js"></script>
 </body>
 
 </html>
